--- a/src/App.css
+++ b/src/App.css
@@ -27,11 +27,9 @@ header {
   width: 600px;
   height: 600px;
   background-color: yellow;
-
-  /* margin-top: 25px; */
 }
 
-.mazeUnit {
+.cellComponent {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -47,4 +45,12 @@ header {
 
 .coords {
   font-size: 3em;
+}
+
+.buttonContainer {
+  width: 300px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  line-height: 0px;
 }
