--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ header {
 .buttonContainer {
   width: 300px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   line-height: 0px;
 }
