--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,11 @@
   --bkgnd-drk: #0c0f0a;
   --maze-bkgnd-init: #1d2518;
   --rose: #ff206e;
+  --rose-red: #cc0047;
+  --emerald: #0cce6b;
   --hookers-green: #648381;
+  --tyrian-purple: #4c0827;
+  --dark-purple: #200116;
 }
 
 * {
